# codegreen-core

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish_doc.yml  release.yml  test.yml  workflow.yml
codegreen_core/: __init__.py
codegreen_core/data/: __init__.py  carbon_intensity.py  co2signal.py  country_list.json  country_metadata.json  entsoe.py  main.py  metadata.py  offline.py
codegreen_core/loadshift/: location.py  main.py  time.py
codegreen_core/models/: predict.py  train.py
codegreen_core/tool/: carbon_emission.py  loadshift_location.py  loadshift_time.py  main.py  savings.py
codegreen_core/tools/: __init__.py  carbon_emission.py  carbon_intensity.py  loadshift_location.py  loadshift_time.py  main.py
codegreen_core/utilities/: caching.py  config.py  log.py  message.py  metadata.py
codegreen_core/utils/: config.py  country_meta.py  message.py
docs/: Tutorials.ipynb  api.rst  conf.py  data.rst  features.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  methodology.rst  models.rst  plot.py  plots.ipynb  references.rst  setup.rst  status.rst  tools.rst  use_codegreen.rst  version_history.rst
docs/_extensions/: country_table_extension.py
docs/_static/: custom.css
tests/: dev.py  get_data.py  test.py  test1_predictions.py  test_carbon_intensity.py  test_data.py  test_entsoe.py  test_loadshift_location.py  test_loadshift_time.py  test_predictions.py  use_tools.py
tests/data/: DE_forecast1.csv  generation_DE_24_downloaded.csv  generation_GR_24_downloaded.csv  test_cases_time.csv  (+1 more)
